libVLC logging API fixes
As reported during our VLC meeting at FOSDEM
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Jean-Baptiste Kempf added Component::Core Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Core Severity::normal Type::bug Version::master git + 1 deleted label
- Jean-Baptiste Kempf changed milestone to %2.1 features
changed milestone to %2.1 features
- Rémi Denis-Courmont added Status::fixed label
added Status::fixed label
- Rémi Denis-Courmont closed
closed
commit ae3b867b Author: Rémi Denis-Courmont remi@remlab.net Date: Mon Mar 18 23:07:53 2013 +0200
libvlc: simplify and clean up external logging API (fixes [#8129](https://code.videolan.org/videolan/vlc/-/issues/8129)) - Scope the callback to its instance. - Avoid leaking the layout of an internal data structure. - Future-proof passing of extra informations through an opaque pointer.
Original author: remi@remlab.net
Please register or sign in to reply