libvlc: simplify and clean up external logging API (fixes #8129)

- Scope the callback to its instance.
 - Avoid leaking the layout of an internal data structure.
 - Future-proof passing of extra informations through an opaque pointer.